--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -373,12 +373,6 @@
   font-weight: bold;
 }
 
-.question {
-  width: 100%;
-  text-align: center;
-  padding: 100px 0;
-}
-
 .main{
   background-color: #f2ecff;
   height:60vh;
@@ -412,7 +406,7 @@
   margin-top: 0px;
   padding-left: 100px;
   font-size:15px;
-border-radius: 8px;
+  border-radius: 8px;
 }
 .one input,.one button{
   width: 25%;
@@ -455,4 +449,40 @@ border-radius: 8px;
 }
 .two p{
   padding: 1px;
+}
+
+/* Homepage question part */
+
+.question {
+  width: 100%;
+  height: 30vh;
+  text-align: center;
+  margin: 100px 0;
+}
+
+.questionSub {
+  background-color: #F2ECFF;
+  height: inherit;
+  /* filter: blur(8px); */
+  box-shadow: 0 0 100px #F2ECFF;
+  padding-top: 100px;
+}
+
+.questionSub p {
+  padding: 20px 0;
+}
+
+.questionEmail input {
+  width: 300px;
+  padding: 20px;
+  margin: 0 20px;
+  border: none;
+  border-radius: 15px;
+  font-size: 15px;
+  box-shadow: 0 0 5px #00000060;
+}
+
+.questionEmail button {
+  padding: 20px 30px;
+  border-radius: 15px;
 }
