--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -508,5 +508,13 @@
 
 .workoutError {
   padding: 10px;
+  background: #ffefef;
+  border: 1px solid #e7195a;
+  color: #e7195a;
+  border-radius: 4px;
+  margin: 20px 0;
+}
 
+input.error {
+  border: 1px solid #e7195a;
 }
