--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -2,6 +2,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   font-family: "Quicksand";
   color: #333;
 }
@@ -38,11 +39,16 @@
 /* Buttons */
 
 .fullColeredButton {  
-  padding: 10px 20px;
+  padding: 10px;
+  cursor: pointer;
   background-color: #A38ED1;
   border-radius: 10px;
   color: #fff;
   border: none;
+}
+
+.fullColeredButton:active {
+  background-color: #9582bf;
 }
 
 .fullColeredButton:hover {
@@ -255,6 +261,11 @@
   outline: none;
 }
 
+.enterYourDetails {
+  font-size: medium;
+  margin: 20px 0;
+}
+
 .pic, .bbb{
   float: left;
   width:50%;
@@ -444,9 +455,9 @@
 }
 
 
-/* dashboard */
+/* dash */
 
-.Dashboardhome {
+.Dashhome {
   display: grid;
   grid-template-columns: 3fr 2fr;
   gap: 100px;
@@ -519,4 +530,88 @@
 
 input.error {
   border: 1px solid #e7195a;
+}
+
+/* Dashboard new */
+.DashBoardhome {
+  margin: 0;
+}
+
+.dHome {
+  width: 75%;
+  margin-left: 20%;
+  padding: 2%;
+}
+
+.dHomeNav {
+  display: flex;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  justify-content: space-between;
+}
+
+.dHomeNavRight {
+  display: flex;
+}
+
+.dHomeNavRight span {
+padding-left: 20px;
+}
+
+
+/* VerticalNavbar */
+
+.verticalNavbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 90%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.verticalNavbar ul li a {
+  display: block;
+  color: #000;
+  padding: 20px 16px;
+  text-decoration: none;
+  opacity: .5;
+  display: flex;
+}
+
+.verticalNavbar ul li a span {
+  padding-right: 10px;
+}
+
+.verticalNavbar ul li a.active {
+  background-color: #ccc;
+  opacity: 1;
+  border-right: #A38ED1 5px solid;
+}
+
+.verticalNavbar ul li a:hover:not(.active) {
+  background-color: #aeaeae;
+  opacity: 1;
+}
+
+.verticalNavbar button {
+  border: none;
+  padding: 20px;
+  font-size: large;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.verticalNavbar button:hover {
+  background-color: #ccc;
+}
+
+.verticalNavbar button:active {
+  background-color: #a1a1a1;
 }
