--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -569,9 +569,7 @@ padding-left: 20px;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  /* width: 20%; */
   background-color: #f1f1f1;
-  /* height: 100%; */
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -616,4 +614,10 @@ padding-left: 20px;
 
 .verticalNavbar button:active {
   background-color: #a1a1a1;
+}
+
+/* addSomeMargin */
+
+.addSomeMargin{
+  margin: 30px;
 }
