--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -62,6 +62,10 @@
   background-color: transparent;
 }
 
+.material-symbols-outlined:hover {
+  color: #f1356d;
+}
+
 /* HomePage */
 
 .firstSession {
@@ -786,6 +790,10 @@ padding-left: 20px;
 
 /* Department Tiles */
 
+.depHomeNavRight button {
+  margin-right: 20px;
+}
+
 .departmentRow{ 
   margin-top: 20px;
 }
@@ -799,6 +807,17 @@ padding-left: 20px;
 
 .departmentTile:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.departmentTile span {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+
 }
 
 /* Meetings Page */
