--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -46,6 +46,7 @@
   border-radius: 10px;
   color: #fff;
   border: none;
+  margin: 0;
 }
 
 .fullColeredButton:active {
@@ -670,6 +671,8 @@ padding-left: 20px;
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  align-items: center;
+
 }
 
 .dashTodos p {
@@ -989,4 +992,67 @@ padding-left: 20px;
 
 .tpProfileSession button {
   margin: 0 10px;
+}
+
+/* Dash Events Form */
+
+.dashCreateForm {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.6);
+}
+
+.dashCloseButton span {
+  font-size: 2em;
+  font-weight: 900;
+}
+
+.dashCForm {
+  background-color: #fff;
+  width: 40%;
+  margin: 80px 30%;
+  border-radius: 20px;
+  padding: 30px;
+}
+
+.dashCForm h2 {
+  margin-bottom: 20px;
+}
+
+.dashCForm input, .dashCForm textarea {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.optional {
+  color: #a9a9a9;
+}
+
+.dashCForm button {
+  width: 100%;
+}
+
+.dashCHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* Dash Announcements */
+
+.dashAnnounNav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
