--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -879,6 +879,10 @@ padding-left: 20px;
   background-color: #8b79b0;
 }
 
+.someP {
+  text-decoration-line: none;
+}
+
 /* Meetings Page */
 
 .meetingsContainer {
@@ -1151,6 +1155,15 @@ padding-left: 20px;
 .annP {
   cursor: pointer;
 }
+
+/* Year */
+
+
+
+
+
+
+
 
 /* --------------- */
 /*  Commen Styles  */
