--- a/cms-project-web/src/index.css
+++ b/cms-project-web/src/index.css
@@ -540,9 +540,6 @@ input.error {
 
 /* Dashboard new */
 
-.dashHomee {
-  padding: 30px;
-}
 
 .DashBoardhome {
   margin: 0;
@@ -714,6 +711,10 @@ padding-left: 20px;
   /* padding-top: 10px; */
 }
 
+.collegeProfile {
+  margin: 30px 20%;
+}
+
 .collegeNewForm input {
   padding: 10px;
   margin-top: 10px;
@@ -858,9 +859,10 @@ padding-left: 20px;
 .depTeachers, .depSubjects {
   padding: 10px 20px;
   background-color: #f1f1f1;
+  height: 72vh;
 }
 
-.depTeachers h2 {
+.depTeachers h2, .depSubjects h2 {
   margin-bottom: 10px;
 }
 
